--- a/uiux.html
+++ b/uiux.html
@@ -57,28 +57,37 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+          <div class="button-container">
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/alya-maisarah-b699041ab" rel="tooltip" title="Connect with me on LinkedIn"><i class="fa fa-linkedin"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="mailto:maisaraha580@gmail.com" rel="tooltip" title="Contact me via Gmail"><i class="fa fa-envelope"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/alyymxrh_/" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
 <div class="section" id="uiux">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 ml-auto mr-auto">
-        <div class="h4 text-center mb-4 title">UI/UX Project</div>
+  <div class="cc-uiux">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 ml-auto mr-auto">
+          <div class="h4 text-center mb-4 title">UI/UX Project</div>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="column">
-        <img src="images/ui (1).jpg" style="width: 500%;">
+      <div class="row">
+        <div class="col-sm-2">
+          <img src="images/cover uiux.png">
+        </div>
+        <div class="col-sm-9">
+          <p><a href="uiux1.html#uiux" style="padding-top: 20px;">OrganizeMe : To-Do List</a></p>
+          <p>Introducing OrganizeMe, the ultimate to-do list application designed for busy individuals who need to stay organized and on top of their tasks. OrganizeMe allows you to effortlessly create and manage your to-do lists, ensuring you never miss a task or deadline again. Whether you need to plan for today or schedule tasks for the future, OrganizeMe has got you covered.</p>
+        </div>
       </div>
-      <a href="uiux1.html#uiux1"><h1>To-Do List</h1></a>
-    </div>
-    <div class="row">
-      <div class="column">
-        <img src="images/ui (2).jpg" style="width:100%">
+      <div class="row">
+        <div class="column">
+          <!--img src="images/ui (2).jpg" style="width:100%"-->
+        </div>
       </div>
     </div>
   </div>
