--- a/uiux1.html
+++ b/uiux1.html
@@ -57,7 +57,10 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/alya-maisarah-b699041ab" rel="tooltip" title="Connect with me on LinkedIn"><i class="fa fa-linkedin"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="mailto:maisaraha580@gmail.com" rel="tooltip" title="Contact me via Gmail"><i class="fa fa-envelope"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/alyymxrh_/" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a>
+          </div>
         </div>
       </div>
     </div>
@@ -70,37 +73,69 @@
         <div class="h4 text-center mb-4 title">UI/UX Project</div>
       </div>
     </div>
-    <div class="row">
-      <div class="column1">
+    <div class="row" data-aos="zoom-in">
+      <div>
+        <h5>The Product</h5>
+        <p style="padding-bottom: 5%;"> 
+          OrganizeMe is a simple app that helps you create and manage to-do lists for all your tasks.
+        </p>
+      </div>
+      <div>
+        <h5>The Brief</h5>
+        <p>
+          I am a busy person who tries to remember everything, including meetings and house chores. Sometimes when I get distracted by something, it is easy for me to forget the important things. Even though I have written reminders on paper, I still cannot remember what should I do when I arrive home. To keep reminding me of the tasks, I use the Notes on my phone. However, the Notes application cannot remind me if I have already done the tasks or not. The app is only for writing down tasks; it doesn't provide reminders. 
+        </p>
+        <img src="images/list before.jpg" style="width:30%; display: block; margin-left: auto; margin-right: auto;">
+        <p style="text-align: center; font-size: 12px;">My phone’s Notepad to-do list feature interface. </p>
+        <p>
+          I downloaded several apps promising to help me create to-do lists and organize my life. However, I found myself either struggling to understand how to use the application or getting distracted by the additional features the apps offered beyond basic to-do functionality.
+        </p>
+        <p>
+          I decided to design a To-do list app that:
+          <ol>
+            <li>
+              Extremely user-friendly.
+            </li>
+            <li>
+              Easy to understand.
+            </li>
+            <li>
+              Allows me to set reminders for every task.
+            </li>
+            <li>
+              Enable me to create a To-do list for other days.
+            </li>
+          </ol>
+        </p>
+      </div>
+      <div class="col-sm-6">
         <img src="images/ui (1).jpg" style="width:100%">
       </div>
-    </div>
-    <div class="row">
-      <div class="column1">
+      <div class="col-sm-6">
         <img src="images/ui (2).jpg" style="width:100%">
       </div>
     </div>
-    <div class="row">
-        <div class="column1">
+    <div class="row" data-aos="zoom-in">
+        <div class="col-sm-6">
           <img src="images/ui (3).jpg" style="width:100%">
         </div>
-    </div>
-    <div class="row">
-        <div class="column1">
+        <div class="col-sm-6">
           <img src="images/ui (4).jpg" style="width:100%">
         </div>
     </div>
-    <div class="row">
-        <div class="column1">
+    <div class="row" data-aos="zoom-in">
+        <div class="col-sm-6">
           <img src="images/ui (5).jpg" style="width:100%">
         </div>
-    </div>
-    <div class="row">
-        <div class="column1">
+        <div class="col-sm-6">
           <img src="images/ui (6).jpg" style="width:100%">
         </div>
     </div>
-
+    <div class="row" data-aos="zoom-in">
+      <div class="col-sm-6 ">
+        <img src="images/ui (7).jpg" style="width:100%">
+      </div>
+    </div>
   </div>
 </div>
 
