--- a/uiux1.html
+++ b/uiux1.html
@@ -70,17 +70,17 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto">
-        <div class="h4 text-center mb-4 title">UI/UX Project</div>
+        <div class="h4 text-center mb-4 title">OrganizeMe : To-Do List</div>
       </div>
     </div>
     <div class="row" data-aos="zoom-in">
-      <div>
+      <div data-aos="zoom-in">
         <h5>The Product</h5>
         <p style="padding-bottom: 5%;"> 
           OrganizeMe is a simple app that helps you create and manage to-do lists for all your tasks.
         </p>
       </div>
-      <div>
+      <div data-aos="zoom-in">
         <h5>The Brief</h5>
         <p>
           I am a busy person who tries to remember everything, including meetings and house chores. Sometimes when I get distracted by something, it is easy for me to forget the important things. Even though I have written reminders on paper, I still cannot remember what should I do when I arrive home. To keep reminding me of the tasks, I use the Notes on my phone. However, the Notes application cannot remind me if I have already done the tasks or not. The app is only for writing down tasks; it doesn't provide reminders. 
@@ -92,7 +92,7 @@
         </p>
         <p>
           I decided to design a To-do list app that:
-          <ol>
+          <ol style="padding-bottom: 5%;">
             <li>
               Extremely user-friendly.
             </li>
@@ -108,6 +108,32 @@
           </ol>
         </p>
       </div>
+      <div data-aos="zoom-in">
+        <h5>Design Solution</h5>
+        <h6>Sketching</h6>
+        <p>
+          Before I started designing on Figma, I sketched down a design solution using a pen and paper, So I could easily figure out how to begin my design on Figma. With a simple design, I fit in the solution that I have come up with in one paper. 
+        </p>
+        <img src="images/sketch.jpg" style="width:30%; display: block; margin-left: auto; margin-right: auto;">
+        <p style="text-align: center; font-size: 12px;">
+          Sketches of the to-do list app.
+        </p>
+        <h6>Wireframe</h6>
+        <p>
+          After sketching the design that I wanted, I jumped on Figma and designed wireframes with more detail and structure. After that, I focused more on colours and images to make the design more realistic.
+        </p>
+      </div>
+      <div class="col-sm-6">
+        <img src="images/wireframe1.png" style="width:100%;">
+      </div>
+      <div class="col-sm-6">
+        <img src="images/wireframe2.png" style="width:100%;">
+      </div>
+      <div>
+        <h6>Final Design</h6>
+      </div>
+    </div>
+    <div class="row" data-aos="zoom-in">
       <div class="col-sm-6">
         <img src="images/ui (1).jpg" style="width:100%">
       </div>
@@ -132,10 +158,53 @@
         </div>
     </div>
     <div class="row" data-aos="zoom-in">
-      <div class="col-sm-6 ">
+      <div class="col-sm-6" style="padding-bottom: 5%;">
         <img src="images/ui (7).jpg" style="width:100%">
       </div>
     </div>
+    <div class="row" data-aos="zoom-in">
+      <div>
+        <h6>Conclusion</h6>
+        <p>
+          Designing for myself has helped me understand how to design a product that meets an exact need. There were times in the design process were I wanted to add features that I felt I would need but going back to my stated goals and needs when using this app and being aware of my behavior as the sole user, I stuck with the ‘blue print’.
+          If I took a step further and redesigned the app for more users other than myself, there will be need for User research. Qualitative user research to be precise, I would host interviews with potential users. I would create Personas and design a solution based on the information I have gotten from the research. There would be testing of the prototype to improve the product.
+        </p>
+        <h6>Tools</h6>
+        <p>
+          <ol>
+            <li>
+              Figma (wireframing and designing)
+            </li>
+          </ol>
+        </p>
+        <h6>Responsibilites</h6>
+        <p>
+          <ol>
+            <li>
+              Strategy
+            </li>
+            <li>
+              Information Architecture
+            </li>
+            <li>
+              Design, UI/UX
+            </li>
+          </ol>
+        </p>
+        <h6>Role</h6>
+        <p>
+          <ol>
+            <li>
+              User
+            </li>
+            <li>
+              Product Designer
+            </li>
+          </ol>
+        </p>
+      </div>
+    </div>
+
   </div>
 </div>
 
