--- a/uiux1.html
+++ b/uiux1.html
@@ -166,8 +166,10 @@
       <div>
         <h6>Conclusion</h6>
         <p>
-          Designing for myself has helped me understand how to design a product that meets an exact need. There were times in the design process were I wanted to add features that I felt I would need but going back to my stated goals and needs when using this app and being aware of my behavior as the sole user, I stuck with the ‘blue print’.
-          If I took a step further and redesigned the app for more users other than myself, there will be need for User research. Qualitative user research to be precise, I would host interviews with potential users. I would create Personas and design a solution based on the information I have gotten from the research. There would be testing of the prototype to improve the product.
+          This design has taught me how to create a product that meets specific needs. 
+          There were moments when I wanted to add extra features that I thought I might need, but by sticking to my original goals and paying attention to how I used the app, I stayed true to the actual plan. 
+          Through this design, I learned how to make a plan by sketching the design before jumping to the wireframe. 
+          If I could redesign any apps based on other users' perspectives and needs, I would interview potential users (which is User Research), create a persona, and design a solution based on the information I gathered from the research.
         </p>
         <h6>Tools</h6>
         <p>
