--- a/index.html
+++ b/index.html
@@ -196,41 +196,35 @@
       <div class="tab-pane active" id="web-development"> <!--Web Development Class-->
         <div class="ml-auto mr-auto">
           <div class="row">
-            <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="uiux.html#uiux">
-                  <figure class="cc-effect"><img src="images/cover uiux.png" alt="Image"/>
+            <div class="col-6 col-md-4">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                <a href="uiux.html#uiux">
+                  <figure class="cc-effect">
+                    <img src="images/cover uiux.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">UI/UX Project</div>
-                      <p>Design</p>
+                      <p>UI/UX Project</p>
                     </figcaption>
-                  </figure></a>
-                </div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/cover uiux.png" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Front-End Project</div>
-                      <p>Web Development</p>
-                    </figcaption>
-                  </figure></a>
-              </div>   
+                  </figure>
+                </a>
+              </div>  
             </div>
-            <div class="col-md-6" >
+            <div class="col-6 col-md-4" >
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/cover uiux.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Back-End Project</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a>
-                </div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/cover uiux.png" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Web Advertising Project</div>
-                      <p>Web Development</p>
-                    </figcaption>
-                  </figure></a>
+              </div>
             </div>
+            <div class="col-6 col-md-4">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+                  <figure class="cc-effect"><img src="images/cover uiux.png" alt="Image"/>
+                    <figcaption>
+                      <p>Web Development</p>
+                    </figcaption>
+                  </figure></a>
+              </div>
             </div>
           </div>
         </div>
