--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
     <div class="tab-content gallery mt-5">
       <div class="tab-pane active" id="web-development"> <!--Web Development Class-->
         <div class="ml-auto mr-auto">
+          <div class="h4 text-center mb-4 title">Project</div>
           <div class="row">
             <div class="col-6 col-md-4">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
@@ -230,77 +231,67 @@
         </div>
       </div>
       <div class="tab-pane" id="graphic-design" role="tabpanel"> <!--Graphic Design Class-->
-        <div class="ml-auto mr-auto">
+        <div class="container">
+          <div class="h4 text-center mb-4 title">Graphic Design</div>
           <div class="row">
-            <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <figure class="cc-effect"><img src="images/graphic-design-1.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Triangle Pattern</div>
-                      <p>Graphic Design</p>
-                    </figcaption>
-                  </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <figure class="cc-effect"><img src="images/graphic-design-2.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Abstract Umbrella</div>
-                      <p>Graphic Design</p>
-                    </figcaption>
-                  </figure></a></div>
+            <div class="column">
+              <img src="images/photo_2024-06-03_19-50-33.jpg" alt="Snow" style="width:100%">
             </div>
-            <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <figure class="cc-effect"><img src="images/graphic-design-3.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Cube Surface Texture</div>
-                      <p>Graphic Design</p>
-                    </figcaption>
-                  </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <figure class="cc-effect"><img src="images/graphic-design-4.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Abstract Line</div>
-                      <p>Graphic Design</p>
-                    </figcaption>
-                  </figure></a></div>
+            <div class="column">
+              <img src="images/photo_2024-06-03_19-50-20.jpg" alt="Forest" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/photo_2024-06-03_19-50-26.jpg" alt="Mountains" style="width:100%">
+            </div>
+          </div>
+          <div class="row">
+            <div class="column">
+              <img src="images/photo_2024-06-03_19-50-28.jpg" alt="Snow" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/photo_2024-06-03_19-50-36.jpg" alt="Forest" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/photo_2024-06-03_19-50-17.jpg" alt="Mountains" style="width:100%">
             </div>
           </div>
         </div>
       </div>
       <div class="tab-pane" id="Photography" role="tabpanel"> <!--Photography Class-->
         <div class="ml-auto mr-auto">
+          <div class="h4 text-center mb-4 title">Photography</div>
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-6 col-md-4">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="Photography.html#photography">
                   <figure class="cc-effect"><img src="images/photo_2024-06-03_19-50-28.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Photoshoot</div>
                       <p>Photography</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
+              <!--div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
                   <figure class="cc-effect"><img src="images/photo_2024-06-03_19-50-17.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Wedding Photoshoot</div>
                       <p>Photography</p>
                     </figcaption>
-                  </figure></a></div>
+                  </figure></a>
+                </div-->
             </div>
-            <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
+            <div class="col-6 col-md-4">
+              <!--div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
                   <figure class="cc-effect"><img src="images/photo_2024-06-03_19-50-20.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Beach Photoshoot</div>
                       <p>Photography</p>
                     </figcaption>
-                  </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
+                  </figure></a></div-->
+              <!--div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
                   <figure class="cc-effect"><img src="images/photo_2024-06-03_19-50-26.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Nature Photoshoot</div>
                       <p>Photography</p>
                     </figcaption>
-                  </figure></a></div>
+                  </figure></a></div-->
             </div>
           </div>
         </div>
@@ -321,7 +312,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Production Manager</div>
+            <div class="h5">Production Operator</div>
             <p>
               <ul>
                 <li>
@@ -444,7 +435,7 @@
             <div class="h5">Bachelor of Information System Engineering</div>
             <p class="category">Universiti Teknologi Mara (UiTM) </p>
             <p>
-              CGPA: 3.04
+              CGPA: 3.07
             </p>
             <p>
               Finar Year Project: Rebong Bakery Ordering System
@@ -611,7 +602,12 @@
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
+      <!--div class="container text-center">
+        <a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a>
+        <a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a>
+        <a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a>
+        <a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a>
+      </div-->
       <div class="h4 title text-center"></div>
       <div class="text-center text-muted">
         <p>&copy; All rights reserved.</p>
