--- a/Photography.html
+++ b/Photography.html
@@ -57,8 +57,11 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
-        </div>
+          <div class="button-container">
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/alya-maisarah-b699041ab" rel="tooltip" title="Connect with me on LinkedIn"><i class="fa fa-linkedin"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="mailto:maisaraha580@gmail.com" rel="tooltip" title="Contact me via Gmail"><i class="fa fa-envelope"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/alyymxrh_/" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a>
+          </div>
       </div>
     </div>
   </div>
@@ -75,21 +78,21 @@
         <img src="images/photo_2024-06-03_19-50-33.jpg" alt="Snow" style="width:100%">
       </div>
       <div class="column">
-        <img src="images/photo_2024-06-03_19-50-33.jpg" alt="Forest" style="width:100%">
+        <img src="images/photo_2024-06-03_19-50-20.jpg" alt="Forest" style="width:100%">
       </div>
       <div class="column">
-        <img src="images/photo_2024-06-03_19-50-33.jpg" alt="Mountains" style="width:100%">
+        <img src="images/photo_2024-06-03_19-50-26.jpg" alt="Mountains" style="width:100%">
       </div>
     </div>
     <div class="row">
       <div class="column">
-        <img src="images/photo_2024-06-03_19-50-26.jpg" alt="Snow" style="width:100%">
+        <img src="images/photo_2024-06-03_19-50-28.jpg" alt="Snow" style="width:100%">
       </div>
       <div class="column">
-        <img src="images/photo_2024-06-03_19-50-26.jpg" alt="Forest" style="width:100%">
+        <img src="images/photo_2024-06-03_19-50-36.jpg" alt="Forest" style="width:100%">
       </div>
       <div class="column">
-        <img src="images/photo_2024-06-03_19-50-26.jpg" alt="Mountains" style="width:100%">
+        <img src="images/photo_2024-06-03_19-50-17.jpg" alt="Mountains" style="width:100%">
       </div>
     </div>
   </div>
@@ -164,7 +167,12 @@
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
+      <!--div class="container text-center">
+        <a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a>
+        <a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a>
+        <a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a>
+        <a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a>
+      </div-->
       <div class="h4 title text-center"></div>
       <div class="text-center text-muted">
         <p>&copy; All rights reserved.</p>
