--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="h2 title">Alya Maisarah</div>
           <p class="category text-white">Front-End Developer</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact Me</a>
-          <a class="btn btn-primary" href="images/RESUME ALYA MAISARAH BINTI ABDUL RAZAK.pdf" rel="tooltip" title="Download" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" download="RESUME_ALYA MAISARAH ABDUL RAZAK">Resume</a>
+          <a class="btn btn-primary" href="images/RESUME ALYA MAISARAH ABDUL RAZAK.pdf" rel="tooltip" title="Download" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" download="RESUME_ALYA MAISARAH ABDUL RAZAK">Resume</a>
         </div>
       </div>
       <div class="section">
@@ -74,7 +74,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Alya Maisarah, a Fresh graduated who is very passion for Front-End Developer as a career.</p>
+            <p>Motivated entry-level front-end developer with a passion for creating responsive and accessible web applications. I am seeking opportunities to apply my knowledge of front-end technologies and continue learning in a collaborative environment. I am eager to continue learning, stay updated with the latest industry trends, and work with a team that encourages growth and creativity.</p>
             <p></p>
           </div>
         </div>
@@ -146,6 +146,22 @@
         </div>
         <div class="row">
           <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">JAVA</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">React.js</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Bootstrap</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
@@ -169,10 +185,11 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Figma</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
               </div>
             </div>
           </div>
+          
         </div>
       </div>
     </div>
@@ -209,7 +226,7 @@
                 </a>
               </div>  
             </div>
-            <div class="col-6 col-md-4" >
+            <!--div class="col-6 col-md-4" >
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/cover uiux.png" alt="Image"/>
                     <figcaption>
@@ -226,7 +243,7 @@
                     </figcaption>
                   </figure></a>
               </div>
-            </div>
+            </div-->
           </div>
         </div>
       </div>
@@ -257,12 +274,12 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane" id="Photography" role="tabpanel"> <!--Photography Class-->
+      <div class="tab-pane" class="photography" id="Photography" role="tabpanel"> <!--Photography Class-->
         <div class="ml-auto mr-auto">
           <div class="h4 text-center mb-4 title">Photography</div>
           <div class="row">
             <div class="col-6 col-md-4">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="Photography.html#photography">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="Photography.html">
                   <figure class="cc-effect"><img src="images/photo_2024-06-03_19-50-28.jpg" alt="Image"/>
                     <figcaption>
                       <p>Photography</p>
