--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Motivated entry-level front-end developer with a passion for creating responsive and accessible web applications. I am seeking opportunities to apply my knowledge of front-end technologies and continue learning in a collaborative environment. I am eager to continue learning, stay updated with the latest industry trends, and work with a team that encourages growth and creativity.</p>
+            <p>Motivated and detail-oriented fresh graduate with a bachelor's degree in Information Systems Engineering, seeking to launch a career as a front-end developer. Passionate about creating user-friendly, visually appealing, and responsive web interfaces using modern technologies. Committed to continuous learning, contributing to innovative projects, and delivering high-quality solutions that enhance user experiences. Looking for opportunities to grow professionally within a dynamic and collaborative environment.</p>
             <p></p>
           </div>
         </div>
@@ -226,16 +226,16 @@
                 </a>
               </div>  
             </div>
-            <!--div class="col-6 col-md-4" >
+            <div class="col-6 col-md-4" >
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/cover uiux.png" alt="Image"/>
                     <figcaption>
-                      <p>Web Development</p>
+                      <p>Academic Projects</p>
                     </figcaption>
                   </figure></a>
               </div>
             </div>
-            <div class="col-6 col-md-4">
+            <!--div class="col-6 col-md-4">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/cover uiux.png" alt="Image"/>
                     <figcaption>
@@ -333,9 +333,6 @@
             <p>
               <ul>
                 <li>
-                  Training, mentoring, and counselling employees to foster a high-performing team.
-                </li>
-                <li>
                   Overseeing the operation of production equipment throughout the manufacturing process to back-fill.
                 </li>
                 <li>
@@ -348,7 +345,10 @@
                   Conducting quality control checks before, during, and after producing each product to meet the specified requirements.
                 </li>
                 <li>
-                  Keying in diverse sets of data into Microsoft Excel with meticulous attention to detail, ensuring accurate record-keeping and facilitating informed decision-making processes within the organization
+                  Strategically planned and executed social media campaigns to promote the product and successfully achieving and exceeding target follower growth by 65%.
+                </li>
+                <li>
+                  Successfully completed 70% of production targets over a period, ensuring timely delivery and adherence to quality standards.
                 </li>
               </ul>
             </p>
@@ -373,13 +373,13 @@
                   Performed a variety of tasks, including designing, marketing, and production.
                 </li>
                 <li>
-                  Designed posters and edited videos for marketing purposes.
+                  Designed posters and edited videos, contributing to 65% of the company’s marketing materials during the internship period.
                 </li>
                 <li>
-                  Joined the production team when they needed help to meet production deadlines.
+                  Collaborated with the production team, increasing productivity by 30% to help meet tight production deadlines.
                 </li>
                 <li>
-                  Designed a label sticker for one of their products as a sample.
+                  Designed a label sticker for one of their products, showcasing creativity and attention to detail.
                 </li>
               </ul>
             </p>
@@ -402,6 +402,9 @@
               <ul>
                 <li>
                   Provided services and marketing for UNIFI, such as promoting UNIFI on social media, creating posters and videos, and facilitating new customer registrations, to enhance connectivity.
+                </li>
+                <li>
+                  Achieved 40% of the sales target through effective social media campaigns and promotional strategies.
                 </li>
               </ul>
             </p>
